--- a/src/app/pages/selection-debit/selection-debit.component.html
+++ b/src/app/pages/selection-debit/selection-debit.component.html
@@ -318,24 +318,31 @@
                     (change)="toggleItem($event, debito.id)"
                     [attr.aria-label]="'Selecionar ' + debito.descricao"
                   />
+              </div>
+              <div class="col descricao">
+                <div class="desc">{{ debito.descricao }}</div>
+                <div class="badges">
+                  <span [class]="getBadgeClass(debito.status)">
+                    <i class="fa-regular fa-clock"></i>
+                    {{ formatStatus(debito.status) }}
+                  </span>
                 </div>
-                <div class="col descricao">
-                  <div class="desc">{{ debito.descricao }}</div>
-                  <div class="badges">
-                    <span [class]="getBadgeClass(debito.status)">
-                      <i class="fa-regular fa-clock"></i>
-                      {{ formatStatus(debito.status) }}
-                    </span>
-                  </div>
-                </div>
-                <div class="col ano">{{ debito.anoDebito }}</div>
-                <div class="col vencimento" [class.danger]="debito.status === 'vencido'" [class.warning]="debito.status === 'hoje'">
+              </div>
+              <div class="row-meta">
+                <div class="col ano" data-label="Ano">{{ debito.anoDebito }}</div>
+                <div
+                  class="col vencimento"
+                  data-label="Vencimento"
+                  [class.danger]="debito.status === 'vencido'"
+                  [class.warning]="debito.status === 'hoje'"
+                >
                   {{ formatDate(debito.vencimento) }}
                 </div>
-                <div class="col valor">{{ formatCurrency(debito.valor) }}</div>
-              </label>
-            </ng-container>
+                <div class="col valor" data-label="Total">{{ formatCurrency(debito.valor) }}</div>
+              </div>
+            </label>
           </ng-container>
+        </ng-container>
 
           <ng-template #flatRows>
             <label
@@ -361,11 +368,18 @@
                   </span>
                 </div>
               </div>
-              <div class="col ano">{{ debito.anoDebito }}</div>
-              <div class="col vencimento" [class.danger]="debito.status === 'vencido'" [class.warning]="debito.status === 'hoje'">
-                {{ formatDate(debito.vencimento) }}
+              <div class="row-meta">
+                <div class="col ano" data-label="Ano">{{ debito.anoDebito }}</div>
+                <div
+                  class="col vencimento"
+                  data-label="Vencimento"
+                  [class.danger]="debito.status === 'vencido'"
+                  [class.warning]="debito.status === 'hoje'"
+                >
+                  {{ formatDate(debito.vencimento) }}
+                </div>
+                <div class="col valor" data-label="Total">{{ formatCurrency(debito.valor) }}</div>
               </div>
-              <div class="col valor">{{ formatCurrency(debito.valor) }}</div>
             </label>
           </ng-template>
         </div>
